feat: impliment the ai
